--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./pic.jpg" alt=  >
+            <img src="./20250321_115855.jpg" alt=  >
             <h1>SAMUVEL.K</h1>
             <p>I Am BCA</p>
         </div>
