--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ interpersonal and academic skills to pursue a challenging and rewarding career
         <div class="section-content">
             <center>
             <h2></h2>
-            <a href="./mycv.pdf" target="_blank" class=></a>
+            <a href="./Screenshot_20250319_131545_TrebEdit.jpg" target="_blank" class=></a>
         </center>
         </div>
         
