--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ interpersonal and academic skills to pursue a challenging and rewarding career
     
         <div class="section-content">
             <center>
-            <h2></h2>
+            <h2>Resume</h2>
             <a href="./Screenshot_20250319_131545_TrebEdit.jpg" target="_blank" class=></a>
         </center>
         </div>
