--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@ interpersonal and academic skills to pursue a challenging and rewarding career
             <center>
             <h2>Resume</h2>
             <a href="./Screenshot_20250319_131545_TrebEdit.jpg" target="_blank" class=></a>
-        </center>
+class="download-button ">Download cv/a>
+            </center
         </div>
         
     </section>
