--- a/index.html
+++ b/index.html
@@ -158,15 +158,15 @@ interpersonal and academic skills to pursue a challenging and rewarding career
         </div>
     </section>
 
-    <section id=>
+    <section id="reaume">
     
         <div class="section-content">
             <center>
             <h2>Resume</h2>
             <a href="./Screenshot_20250319_131545_TrebEdit.jpg" target="_blank" class=></a>
-class="download-button ">Download cv/a>
+    class="download-button">Download cv/a>
             </center
-        </div>
+            </div>
         
     </section>
 
